--- a/PortfolioWebsite/package.json
+++ b/PortfolioWebsite/package.json
@@ -17,13 +17,10 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "apexcharts": "^3.35.0",
     "axios": "^1.4.0",
     "framer-motion": "^6.2.9",
     "next-router": "^1.3.6",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
-    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.10.1",
@@ -57,7 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/next": "^9.0.0"
-  }
+  "devDependencies": {}
 }
