--- a/BankAPI/package.json
+++ b/BankAPI/package.json
@@ -38,6 +38,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.16.0",
+    "aos": "^2.3.4",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
