--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: unless-stopped
     command: bash -c "npm run start:migrate:prod"
     environment:
-      DATABASE_URL: postgresql://postgres:4AAF4cv-XIMKPPE12c-izplKT51HMr_e@db:5432/bank_db
+      DATABASE_URL: postgres://postgres:4AAF4cv-XIMKPPE12c-izplKT51HMr_e@db:5432/bank_db
       JWT_SECRET: super-secret
     ports:
       - "4000:4000"
@@ -37,11 +37,11 @@ services:
     restart: always
     # command: bash -c "npx prisma migrate prod --name init"
     environment:
-      POSTGRES_DB: nest
+      POSTGRES_DB: bank_db
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
+      POSTGRES_PASSWORD: 4AAF4cv-XIMKPPE12c-izplKT51HMr_e
     ports:
-      - "5434:5432"
+      - "5432:5432"
     volumes:
       - ./postgres-db:/var/lib/postgresql/data
     networks:
